# socks5-crypto

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
PyTest/: client_tcp_v4.py  client_tcp_v6.py  client_udp_v4.py  client_udp_v6.py  config.json  func.py  s5.py  server_all.py  server_base.py  server_v4.py  server_v6.py  test.py
include/socks5-crypto/: socks5-crypto.h
program/: CMakeLists.txt  test-dns-cache.c  test-server.c
src/: CMakeLists.txt  handler.c  internal.h  launch.c  utils.c
src/comm/: comm.h  list.c  list.h
src/netio/: dgramsc.c  dgramsc.h  dns_cache.c  dns_cache.h  handler.c  internal.h  s5.c  s5.h  server.c  srv_dgram.c  srv_tcp.c  util.c
src/tls-flat/: crt_pool.c  handler.c  internal.h  tls.c  tls_handshake.c  tls_recv.c  tls_send.c  tls_transmit.c  tlsflat.c  util.c
